webrender blacklist prefs saved in prefs.js
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox108 | --- | fixed |
People
(Reporter: morgan.hager1, Assigned: aosmond)
References
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:105.0) Gecko/20100101 Firefox/105.0
Steps to reproduce:
- Start Firefox on Linux with deprecated Intel DDX driver, causing hardware WebRender to be disabled
- Quit Firefox and Xorg
- Change Xorg config to use modesetting driver
- Start Firefox and Xorg
Actual results:
WebRender is disabled until the about:config option gfx.blacklist.webrender is cleared manually
Expected results:
WebRender should have been re-enabled when Firefox was launched again, instead of requiring clearing a value manually
Comment 1•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Graphics: WebRender' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Assignee | ||
Comment 3•2 years ago
|
||
We don't appear to handle ALLOW_ALWAYS, ALLOW_QUALIFIED, DENIED, FEATURE_STATUS_UNKNOWN, or FEATURE_BLOCKED_PLATFORM_TEST:
https://searchfox.org/mozilla-central/rev/88f285c5163f73abd209d4f73cfa476660351982/widget/GfxInfoBase.cpp#1429
Assignee | ||
Comment 4•2 years ago
|
||
Oh wait, I see there is a default switch just above the line I linked. That should have removed it although we should make this code clearer and handle the various status codes properly...
Assignee | ||
Comment 5•2 years ago
|
||
We have added a number of new status codes, for the allowlist and new
errors that were not previously handled by the code managing the gfx
blocklist prefs. We also now iterate over the range of features instead
of manually listing the features, as some were missed during previous
additions.
Comment 7•2 years ago
|
||
bugherder |
Description
•