Bug 1793218 - Refactor gfx blocklist pref management to avoid missing features/status codes. r=gfx-reviewers,lsalzman

We have added a number of new status codes, for the allowlist and new
errors that were not previously handled by the code managing the gfx
blocklist prefs. We also now iterate over the range of features instead
of manually listing the features, as some were missed during previous
additions.

Differential Revision: https://phabricator.services.mozilla.com/D160053